# cv-convert

./: .gitignore  DB-MySQL.html  DB-Postgres.html  DB.html  Dockerfile  JSON-Utils.html  LICENSE  Main.hs  README.md  Runtime-Error.html  Runtime-Types.html  Runtime-Utils.html  Runtime.html  azure-pipelines.yml  cv-convert.cabal  cv-convert.haddock  cv-convert.txt  doc-index.html  doc-index.json  hie.yaml  index.html  stack-gh-pages  stack-profile  stack-test-docker-with-db  stack-test-with-db  stack.yaml
.github/workflows/: CI.yml
cv-convert-0.5.1/: DB-MySQL.html  DB-Postgres.html  DB.html  JSON-Utils.html  Runtime-Error.html  Runtime-Types.html  Runtime.html  cv-convert.haddock  cv-convert.txt  doc-index.html  doc-index.json  index.html
cv-convert-0.5.1/src/: DB.MySQL.html  DB.Postgres.html  DB.Types.html  DB.Utils.html  DB.html  JSON.Utils.html  Parse.Csv.html  Parse.Utils.html  Parse.Xlsx.html  Paths_cv_convert.html  Runtime.Error.html  Runtime.Types.html  Runtime.html  Schema.html
quickjs/: quickjs-libc.c  quickjs-libc.h
src/: DB.MySQL.html  DB.Postgres.html  DB.Types.html  DB.Utils.html  DB.hs  DB.html  JSON.Utils.html  Parse.Csv.html  Parse.Utils.html  Parse.Xlsx.html  Paths_cv_convert.html  Quickjs.hs  Quickjs.hsc  Runtime.Error.html  Runtime.Types.html  Runtime.Utils.html  Runtime.hs  Runtime.html  Schema.hs  Schema.html
src/DB/: MySQL.hs  Postgres.hs  Types.hs  Utils.hs
src/JSON/: Utils.hs
src/Parse/: Csv.hs  Utils.hs  Xlsx.hs
src/Quickjs/: Error.hs  Internal.hsc  RTS.hsc  Types.hsc
src/Runtime/: Error.hs  Types.hs  Utils.hs
test/: Spec.hs
test/JSON/Utils/: Tests.hs
test/Quickjs/: Tests.hs
test/Runtime/: Tests.hs
test/Runtime/golden/: IonXpress_001_vcf.txt  IonXpress_001_vcf.txt.gold  IonXpress_001_vcf.txt.settings  empty.xlsx  empty_with_custom_processFunction.json.gold  empty_with_custom_processFunction.json.settings  file_with_BOM.csv  file_with_BOM.csv.gold  file_with_BOM.csv.settings  header_only.csv  header_only.xlsx  multiple_records_from_row.csv  multiple_records_from_row.csv.gold  multiple_records_from_row.csv.settings  second_row_should_fail_to_validate.json  second_row_should_fail_to_validate.json.gold  select_worksheet_B.xlsx  select_worksheet_B.xlsx.gold  select_worksheet_B.xlsx.settings  select_worksheet_default_to_A.xlsx  select_worksheet_default_to_A.xlsx.gold  semicolon_separated_file.csv  semicolon_separated_file.csv.gold  semicolon_separated_file.csv.settings  should_fail_with_no_subject_id_found.json  should_fail_with_no_subject_id_found.json.gold  should_fail_with_no_subject_id_found.txt.gold  should_validate.json  should_validate.json.gold  should_validate.json.settings  single_array_element.json  single_object.json  single_object.json.gold  single_row.csv.gold  single_row.xlsx  single_row.xlsx.gold  single_row_test_inline_library.csv  single_row_test_inline_library.csv.gold  single_row_test_inline_library.csv.settings
